fix: replaced deprecated URL(String) constructor with URI-based approach for Java 20+ compatibility